# camkes-vm-examples

./: Makefile.tii_sel4_build  README.md  settings.cmake
apps/Arm/vm_cross_connector/src/: cross_vm_connections.c
apps/Arm/vm_intervm/: CMakeLists.txt
apps/Arm/vm_introspect/src/: cross_vm_connection.c
apps/Arm/vm_minimal/: CMakeLists.txt  settings.cmake  vm_minimal.camkes
apps/Arm/vm_minimal/rpi4/: devices.camkes
apps/Arm/vm_multi/: CMakeLists.txt  settings.cmake  vm_multi.camkes
apps/Arm/vm_multi/qemu-arm-virt/: devices.camkes
apps/Arm/vm_multi/src/: init_dataport_ram.c  shared_memory.c
apps/x86/virtio_blk_sample/: CMakeLists.txt  app_settings.cmake  virtio_blk_sample.camkes
